--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.7.2",
     "mockjs": "^1.0.1-beta3",
